# python_lab

./: .gitignore  README.md  pyproject.toml
data/lab04/: check.csv
data/lab05/samples/: testik.csv  testik.json
data/lab08/: students_input.json  students_output.json
data/lab09/: students.csv
scr/lab01/: 02_sum_avg.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06.py  07.py
scr/lab02/: arrays.py  matrix.py  tuples.py
scr/lib/: rvan.py
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06.py  07.py
src/lab02/: arrays.py  matrix.py  tuples.py
src/lab03/: README.md  text_stats.py
src/lab04/: io_txt_csv.py  text_report.py
src/lab05/: csv_xlsx.py  json_csv.py
src/lab06/: cli_commands.py  cli_convertor.py
src/lab08/: models.py  serialize.py
src/lab09/: __init__.py  group.py
src/lab10/: linked_list.py  structures.py  testovik.py
src/lib/: text.py
tests/: test_json_csv.py  test_text.py
