[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_labs"
version = "1.00.2025"
dependencies = ["openpyxl>=3.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
]

[tool.black]
skip-string-normalization = true
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = ["-v", "--tb=short", "--strict-markers"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/test_*",
    "*/__pycache__/*",
    "*/lib/__init__.py*",
    "*/tests/__init__.py*",
    "*/src/__init__.py*",
]
